[package]
name = "giveup"
license = "MIT"
description = "User-geared error messages and hints"
version = "0.1.0"
authors = ["Thassilo Schulze"]
edition = "2021"
repository = "https://github.com/thass0/giveup"
keywords = ["errors", "cli", "hints"]
categories = ["command-line-interface", "rust-patterns"]

[features]
# Enable a `Giveup` and `Example` implementation for
# `Result`s from the anyhow crate.
anyhow = ["dep:anyhow"]

[dependencies]
colored = "2"
anyhow = { version = "1.0", optional = true }
cfg-if = "1.0.0"
